# questionnaire

./: Dockerfile  README.md  docker-compose.yml  load_test_data.sh  pyproject.toml  requirements.txt  start.sh
answers/: admin.py  forms.py  models.py  urls.py  views.py  widgets.py
answers/locale/ru/LC_MESSAGES/: django.po
answers/management/commands/: initadmin.py
answers/migrations/: 0001_initial.py  0002_page_stack.py  0003_answers_related_name.py  0004_alter_answer_options_alter_pagestack_options.py
answers/static/answers/: sign-in.css
answers/templates/answers/: base.html  base_page.html  done.html  form_snippet.html  no_surveys.html  page.html  sign_in.html
answers/templates/answers/widgets/: input_option.html  multiple_input.html
fixtures/: Page.json  Question.json  SelectOption.json  Survey.json
formpages/: admin.py  apps.py  forms.py  models.py
formpages/locale/ru/LC_MESSAGES/: django.po
formpages/migrations/: 0001_initial.py  0002_next_page.py  0003_selectoption_next_page.py  0004_survey.py  0005_alter_page_options_alter_question_options_and_more.py
questionnaire/: settings.py  urls.py
tests/answers/: test_forms.py  test_views.py  test_widgets.py
