[tool.poetry]
name = "questionnaire"
version = "0.1.0"
description = ""
authors = ["Lev Sergeev <levushka46@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "~5.0"
black = "~24.4"

[tool.black]
line-length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
