[tool.poetry]
name = "questionnaire"
version = "0.1.0"
description = ""
authors = ["Lev Sergeev <levushka46@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "~5.0"

[tool.poetry.group.dev.dependencies]
black = "~24.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-django = "^4.8.0"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "questionnaire.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
